--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,13 @@
     line-height: 58px;
     color: #FFFFFF;
 }
+.text1 {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 30px;
+    line-height: 58px;
+    color: #FFFFFF;
+}
 
 .button {
     background: #FFFFFF;
