--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@
     line-height: 58px;
     color: #FFFFFF;
 }
+
 .text1 {
     font-style: normal;
     font-weight: normal;
@@ -31,6 +32,15 @@
     line-height: 58px;
 }
 
+.button1 {
+    margin-top:100%;
+    margin-left: 100%;
+    width: 300px;
+    height: 100px;
+    background: transparent;
+    border: none !important;
+    font-size: 0;
+}
 
 .cat {
 
