--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,9 @@
 }
 
 .button1 {
-    margin-top:100%;
-    margin-left: 100%;
+    position: absolute;
+    bottom:0;
+    right: 0;
     width: 300px;
     height: 100px;
     background: transparent;
