--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
     text-align: center;
+    background: #00aeaf;
 }
 
 .text {
@@ -43,6 +44,7 @@
     font-size: 0;
 }
 
-.cat {
-
+.audio {
+    position: absolute;
+    bottom:0;
 }
