--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     font-family: 'Lato', sans-serif;
     text-align: center;
-    background-image: url("./Pics/cat.jpg");
+    background-image: url("./Pics/bg.jpg");
 
 }
 
